fixed spacing in projects and some text

--- a/src/style.css
+++ b/src/style.css
@@ -141,6 +141,10 @@ h3 .fas {
   font-weight: bold;
 }
 
+.projects .row {
+  margin-bottom: 40px;
+}
+
 /* NAVBAR */
 
 .navbar {
@@ -275,5 +279,9 @@ footer p a:hover {
   footer .social-links a {
     font-size: 18px;
     padding: 10px 14px;
+  }
+
+  .projects .row {
+    margin-bottom: 0;
   }
 }
